# svg-point-mapper

./: .gitignore  CMakeLists.txt  README.md  main.cpp
libs/nanosvg/src/: nanosvgrast.h
parser/: cmdline.h
